--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,55 @@
     <title>My Recipe</title>
 </head>
 <body>
-    <h1>I m base</h1>
+    <header>
+        <!-- top navbar -->
+        <nav class="nav-extended  green accent-4">
+            <div class="nav-wrapper">
+            <a href="{{url_for('get_recipes')}}" class="brand-logo"><img src="static/images/myRecipeLogo.png" alt="logo name My Recipe"></a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Recipes</a></li>
+                <li><a href="#">New Recipe</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Log Out</a></li>
+                <li><a href="{{url_for('register')}}">Register</a></li>
+            </ul>
+            </div>
+        </nav>
+        <!-- mobile side navbar -->
+        <ul class="sidenav" id="mobile-demo">
+            <li><h4 class="center-align">My Recipes</h4></li>
+            <li><a href="{{url_for('get_recipes')}}">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Recipes</a></li>
+            <li><a href="#">New Recipe</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="{{url_for('register')}}">Register</a></li>
+        </ul>
+    </header>
 
+    <section>
+        <!-- flash message -->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <div class="row flashes">
+                    <h4 class="center-align">{{ message }}</h4>
+                </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </section>
+
+    <div class="container">
     {% block content %}
     
     {% endblock %}
+    </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
   {% block scripts%}
