--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,9 @@
-body{
-    background-color: rebeccapurple;
+nav a img {
+    width:65px;
+    height:65px;
+    margin-left: 10px;
+}
+
+.flashes h4 {
+    line-height: 2;
 }
