--- a/templates/base.html
+++ b/templates/base.html
@@ -19,26 +19,31 @@
             <a href="{{url_for('get_recipes')}}" class="brand-logo"><img src="static/images/myRecipeLogo.png" alt="logo name My Recipe"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">Recipes</a></li>
-                <li><a href="#">New Recipe</a></li>
-                <li><a href="#">Log In</a></li>
-                <li><a href="#">Log Out</a></li>
-                <li><a href="{{url_for('register')}}">Register</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Recipes</a></li>
+                {% if session.user %}
+                    <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="#">New Recipe</a></li>
+                    <li><a href="{{url_for('logout')}}">Log Out</a></li>
+                {% else %}
+                    <li><a href="{{url_for('login')}}">Log In</a></li>
+                    <li><a href="{{url_for('register')}}">Register</a></li>
+                {% endif %}
             </ul>
             </div>
         </nav>
         <!-- mobile side navbar -->
         <ul class="sidenav" id="mobile-demo">
-            <li><h4 class="center-align">My Recipes</h4></li>
-            <li><a href="{{url_for('get_recipes')}}">Home</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Recipes</a></li>
-            <li><a href="#">New Recipe</a></li>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Log Out</a></li>
-            <li><a href="{{url_for('register')}}">Register</a></li>
+                <li><a href="#">Home</a></li>
+                    <li><a href="#">Recipes</a></li>
+                {% if session.user %}
+                    <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
+                    <li><a href="#">New Recipe</a></li>
+                    <li><a href="{{url_for('logout')}}">Log Out</a></li>
+                {% else %}
+                    <li><a href="{{url_for('login')}}">Log In</a></li>
+                    <li><a href="{{url_for('register')}}">Register</a></li>
+                {% endif %}
         </ul>
     </header>
 
