--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+
 nav a img {
     width:65px;
     height:65px;
@@ -6,4 +8,46 @@ nav a img {
 
 .flashes h4 {
     line-height: 2;
+}
+
+.card{
+    width: 255px;
+    height:300px;
+    border-radius: 10px;
+
+}
+
+.card-content {
+    text-align: center;
+}
+.card-image img {
+    height: 150px;
+}
+
+.card .card-content p {
+    margin: 0;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+}
+
+.card-details{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.cook-time,
+.servings{
+    font-size: 17px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    display: flex;
+    flex-flow: column;
+    text-align: center;
+}
+    
+.card-span{
+    font-weight: 700;
 }
