--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
+                    <li><a href="{{url_for('get_recipes')}}">Recipes</a></li>
                 {% if session.user %}
                     <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="#">New Recipe</a></li>
+                    <li><a href="{{url_for('add_recipe')}}">New Recipe</a></li>
                     <li><a href="{{url_for('logout')}}">Log Out</a></li>
                 {% else %}
                     <li><a href="{{url_for('login')}}">Log In</a></li>
@@ -35,10 +35,10 @@
         <!-- mobile side navbar -->
         <ul class="sidenav" id="mobile-demo">
                 <li><a href="#">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
+                    <li><a href="{{url_for('get_recipes')}}">Recipes</a></li>
                 {% if session.user %}
                     <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="#">New Recipe</a></li>
+                    <li><a href="{{url_for('add_recipe')}}">New Recipe</a></li>
                     <li><a href="{{url_for('logout')}}">Log Out</a></li>
                 {% else %}
                     <li><a href="{{url_for('login')}}">Log In</a></li>
