--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@
                 </div>
                 <!-- login -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4">
+                    <button type="submit" class="col s12 btn-large green accent-4 ">
                         Log In<i class="fas fa-sign-in-alt"></i></button>
                 </div>
             </div>
