--- a/templates/register.html
+++ b/templates/register.html
@@ -22,7 +22,7 @@
                 </div>
                 <!-- button -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large light-blue darken-4">Register<i class="fas fa-sign-in-alt"></i></button>
+                    <button type="submit" class="col s12 btn-large green accent-4">Register<i class="fas fa-sign-in-alt"></i></button>
                 </div>
             </div>
         </form>
