--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -4,7 +4,7 @@
 <h3 class="center-align">Add Recipe</h3>
 
     <div class="row card-panel grey lighten-5">
-        <form class="col s12" method="POST" action="">
+        <form class="col s12" method="POST" action="{{url_for('add_recipe')}}">
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix"></i>
@@ -44,6 +44,13 @@
                     <textarea id="recipe_description" name="recipe_description" minlength="5" maxlength="200"
                     class="materialize-textarea" required></textarea>
                     <label for="recipe_description">Cooking Method</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                        Add Recipe <i class="fas fa-plus-square right"></i>
+                    </button>
                 </div>
             </div>
         </form>
