add viladation to form

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -22,7 +22,7 @@
                     <div class="card-details">
                         <p class="cook-time">Cook Time<span class="card-span">{{recipe.recipe_time }}</span></p>
                         <p class="servings">Serves<span class="card-span">{{recipe.recipe_serving }}</span></p>
-
+                        <!-- <p><em>by:{{recipe.created_by}}</em></p> -->
                     </div>
                 </div>
             </div>
