--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1 class="align-center">Recipes</h1>
+<h1 class="center-align">Recipes</h1>
     <div class="row card-panel grey lighten-5">
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
