--- a/templates/base.html
+++ b/templates/base.html
@@ -64,16 +64,16 @@
     {% endblock %}
     </div>
         <footer class="page-footer green accent-4">
-          <div class="container">
+          <div class="container-fluid">
             <div class="row">
-              <div class="col l6 s12">
+              <div class="col l6 s12 footer-text">
                 <h5 class="white-text">My Recipes</h5>
                 <p class="grey-text text-lighten-4">The way YOU cook.</p>
               </div>
-              <div class="col l4 offset-l2 s12">
-                <img src="../static/images/icons8-facebook-80.png">
-                <img src="../static/images/icons8-instagram-80.png">
-                <img src="../static/images/icons8-twitter-100.png">
+              <div class="col l4 offset-l2 s12 social-icons">
+                <img src="../static/images/facebook.png">
+                <img src="../static/images/instagram.png">
+                <img src="../static/images/twitter.png">
               </div>
             </div>
           </div>
