--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,12 @@
 <body>
     <header>
         <!-- top navbar -->
-        <nav class="nav-extended  green accent-4">
+        <nav class="nav-extended grey darken-3">
             <div class="nav-wrapper">
-            <a href="{{url_for('get_recipes')}}" class="brand-logo left"><img src="static/images/myRecipeLogo.png" alt="logo name My Recipe"></a>
+            <a href="{{url_for('recipes')}}" class="brand-logo left"><img src="static/images/myRecipeLogo.png" alt="logo name"></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
-                    <li><a href="{{url_for('get_recipes')}}">Recipes</a></li>
+                    <li><a href="{{url_for('recipes')}}">Recipes</a></li>
                 {% if session.user %}
                     <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{url_for('add_recipe')}}">New Recipe</a></li>
@@ -33,7 +33,7 @@
         </nav>
         <!-- mobile side navbar -->
         <ul class="sidenav green accent-4" id="mobile-demo">
-                    <li><a href="{{url_for('get_recipes')}}">Recipes</a></li>
+                    <li><a href="{{url_for('recipes')}}">Recipes</a></li>
                 {% if session.user %}
                     <li><a href="{{url_for('profile', username=session['user']) }}">Profile</a></li>
                     <li><a href="{{url_for('add_recipe')}}">New Recipe</a></li>
@@ -58,7 +58,7 @@
         {% endwith %}
     </section>
 
-    <div class="container">
+    <div class="container-fluid">
     {% block content %}
     
     {% endblock %}
