--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,49 +1,58 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="image">
+    <!-- <div class="row">
+        <div class="col"> -->
+            <div class="bg-img">
+                <img src="../static/images/food-crop.png" alt="food image">
 
-    <h1 class="center-align">Recipes</h1>
-    <div class="row card-panel grey lighten-5">
-        <form action="{{ url_for('search') }}" method="post" class="col s12">
-            <div class="row  center-align">
-                <div class="field-wrapper">
-                    <div class="input-field col s12 m6">
-                        <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                        <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                        <label for="query">Search Recipes</label>
+                <form action="{{ url_for('search') }}" method="post" class="search-box">
+                    <div class="row  center-align">
+                        <div class="field-wrapper">
+                            <div class="input-field ">
+                                <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                                <input type="text" name="query" id="query" minlength="3" class="validate " required>
+                                <label for="query">Search Recipes</label>
+                            </div>
+                        
+                            <div class="valign-wrapper button-wrapper">
+                                <a href="{{ url_for('recipes') }}" class="red btn text-shadow">Reset</a>
+                                <button type="submit" class="green accent-4 ml-3 darken-1 btn text-shadow">
+                                    <i class="fas fa-search left"></i> Search
+                                </button>
+                            </div>
+                            </div>
                     </div>
-                
-                    <div class="col s12 m6  valign-wrapper button-wrapper">
-                        <a href="{{ url_for('get_recipes') }}" class="red btn text-shadow">Reset</a>
-                        <button type="submit" class="green accent-4 ml-3 darken-1 btn text-shadow">
-                            <i class="fas fa-search left"></i> Search
-                        </button>
-                    </div>
-                    </div>
+                </form>
             </div>
-        </form>
-    </div>
+        <!-- </div>
+    </div> -->
+</div>
+    <h1 class="center-align">Recipes</h1>
 
     <div class="row">
         {% for recipe in recipes %} 
-            <div class="col s12 m4">
-                <div class="card hoverable">
-                    <div class="card-image">
-                        <p class="card-content">{{recipe.recipe_name }}</p>
-                        {% if recipe in recipes %}
-                            <img src="{{recipe.receipe_image_URL }}">
-                        {% else %}
+            <div class="col s12 m3">
+                <a href="{{url_for('get_recipes') }}">
+                    <div class="card hoverable">
+                        <div class="card-image">
+                            {% if recipe.recipe_img_URL  %}
+                            <img src="{{ recipe.recipe_img_URL }}">
+                            {% else %}
                             <img src="../static/images/myRecipeLogo.png">
-                        {% endif %}
-                         
+                            {% endif %}
+                            
+                        </div>
+                        <p class="card-content">{{recipe.recipe_name }}</p>
+                        <!-- <div >
+                        </div> -->
+                        <div class="card-details">
+                            <p class="cook-time">Cook Time<span class="card-span">{{recipe.recipe_time }}</span></p>
+                            <p class="servings">Serves<span class="card-span">{{recipe.recipe_serving }}</span></p>
+                            <!-- <p><em>by:{{recipe.created_by}}</em></p> -->
+                        </div>
                     </div>
-                    <!-- <div >
-                    </div> -->
-                    <div class="card-details">
-                        <p class="cook-time">Cook Time<span class="card-span">{{recipe.recipe_time }}</span></p>
-                        <p class="servings">Serves<span class="card-span">{{recipe.recipe_serving }}</span></p>
-                        <!-- <p><em>by:{{recipe.created_by}}</em></p> -->
-                    </div>
-                </div>
+                </a>
             </div>
         {% endfor %}
     </div>
