--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -33,7 +33,7 @@
     <div class="row">
         {% for recipe in recipes %} 
             <div class="col s12 m3">
-                <a href="{{url_for('get_recipes') }}">
+                <a href="{{ url_for('get_recipe', recipe_id=recipe._id) }}">
                     <div class="card hoverable">
                         <div class="card-image">
                             {% if recipe.recipe_img_URL  %}
