--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -11,7 +11,7 @@
                         <div class="field-wrapper">
                             <div class="input-field ">
                                 <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                                <input type="text" name="query" id="query" minlength="3" class="validate " required>
+                                <input type="text" name="query" id="query" style="color: #C0C0C0;" minlength="3" class="validate " required>
                                 <label for="query">Search Recipes</label>
                             </div>
                         
