add recipe separation

--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -48,7 +48,7 @@
              <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix"></i>
-                    <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5" maxlength="500"
+                    <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5" maxlength="5net00"
                     class="materialize-textarea" required></textarea>
                     <label for="recrecipe_ingredientsipe_description">Cooking Ingredients</label>
                 </div>
