--- a/static/css/style.css
+++ b/static/css/style.css
@@ -70,6 +70,22 @@ nav a img {
     border-radius: 10px;
 }
 
+
+.food-wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content:space-evenly;
+}
+
+.hr-recipes {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    border: 0;
+    border-top: 1px solid rgba(48, 44, 44, 0.5);
+    width: 85%;
+}
+
 .card{
     /* width: 250px; */
     /* height:350px;  */
