--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
         {% endwith %}
     </section>
 
-    <div class="container-fluid">
+    <div class="container">
     {% block content %}
     
     {% endblock %}
