--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,7 +3,7 @@
 
 <h3 class="center-align">Add Recipe</h3>
 
-    <div class="row card-panel grey lighten-5">
+    <div class="row card-panel grey lighten-5" >
         <form class="col s12" method="POST" action="{{url_for('add_recipe')}}">
             <div class="row">
                 <div class="input-field col s12">
@@ -45,12 +45,19 @@
                     <label for="recipe_serving">Serving</label>
                 </div>
             </div>
-             <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix"></i>
-                    <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5" maxlength="5net00"
-                    class="materialize-textarea" required></textarea>
-                    <label for="recrecipe_ingredientsipe_description">Cooking Ingredients</label>
+             <div class="row ">
+                <div class="input-field col s12" id="ingredients">
+                    <div class="cooking-ingredients-1">
+                        <i class="material-icons prefix"></i>
+                        <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5" maxlength="5net00"
+                        class="materialize-textarea" required></textarea>
+                        <label for="recipe_ingredients">Cooking Ingredients</label>
+                    </div>
+                    <div class="buttons">
+                         <button id="add_ingredient" type="button" class="btn-small light-blue darken-1 text-shadow">
+                        Add Ingredient <i class="fas fa-plus-square right"></i>
+                    </button>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -59,6 +66,11 @@
                     <textarea id="recipe_description" name="recipe_description" minlength="5" maxlength="1000"
                     class="materialize-textarea" required></textarea>
                     <label for="recipe_description">Cooking Method</label>
+                    <div class="buttons">
+                        <button type="button" class="btn-small light-blue darken-1 text-shadow">
+                        Add Step <i class="fas fa-plus-square right"></i>
+                    </button>
+                    </div>
                 </div>
             </div>
             <div class="row">
