--- a/templates/base.html
+++ b/templates/base.html
@@ -57,9 +57,9 @@
             {% endif %}
         {% endwith %}
     </section>
-
-    <div class="container">
+    <div class="container-fluid">
     {% block content %}
+
     
     {% endblock %}
     </div>
