--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -9,12 +9,11 @@
                 <div class="input-field col s12">
                     <i class="material-icons prefix"></i>
                     <select id="category_name" name="category_name" class="validate" required>
-                    <option value="" disabled selected>Choose Category</option>
-                    {% for category in categories %}
-                        <option value="{{category.category_name}}">{{category.category_name}}</option>
-                    {% endfor %}
+                        <option value="" disabled selected>Choose Category</option>
+                        {% for category in categories %}
+                            <option value="{{category.category_name}}">{{category.category_name}}</option>
+                        {% endfor %}
                     </select>
-                    <label>Recipe Category</label>
                 </div>
             </div>
              <div class="row">
@@ -49,11 +48,11 @@
                 <div class="input-field col s12" id="ingredients">
                     <div class="cooking-ingredients-1">
                         <i class="material-icons prefix"></i>
-                        <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5" maxlength="5net00"
+                        <textarea id="recipe_ingredients" name="recipe_ingredients" minlength="5" maxlength="500"
                         class="materialize-textarea" required></textarea>
                         <label for="recipe_ingredients">Cooking Ingredients</label>
                     </div>
-                    <div class="buttons">
+                    <div class="buttons" id="btn-ingredient">
                          <button id="add_ingredient" type="button" class="btn-small light-blue darken-1 text-shadow">
                         Add Ingredient <i class="fas fa-plus-square right"></i>
                     </button>
