--- a/templates/base.html
+++ b/templates/base.html
@@ -58,12 +58,18 @@
         {% endwith %}
     </section>
     <div class="container-fluid">
+    {% block image %}
+
+    
+    {% endblock image %}
+    </div>
+    <div class="container">
     {% block content %}
 
     
     {% endblock %}
     </div>
-        <footer class="page-footer green accent-4">
+        <footer class="page-footer grey">
           <div class="container-fluid">
             <div class="row">
               <div class="col l6 s12 footer-text">
