--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,7 +9,13 @@
                 <h3 class="center-align light-blue-text text-darken-4">
                     {{username}}'s Profile
                 </h3>
+                
             </div>
+            <div>
+                    <div>My Recipes</div>
+                    <div>My Favourite Recipes</div>
+                    
+                </div>
         </div>
     </div>
     
