--- a/templates/get_recipes.html
+++ b/templates/get_recipes.html
@@ -32,7 +32,7 @@
             
             <div id="controls">
                 <a href="{{ url_for('edit_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Edit</a>
-                <a class="control-btn btn-small">Delete</a>
+                <a href="{{ url_for('delete_recipe', recipe_id=recipes._id)}}" class="control-btn btn-small">Delete</a>
              
             </div>
             
