--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 
-<p>Woops, that page doesn't exist! (404)</p>
+<h4>Woops, that page doesn't exist! (404)</h4>
 
-
+    <div class="row">
+        <div class="col s12 center-align">
+                <a href="{{ url_for('recipes') }}" >
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                        Back to Recipes <i class="fas fa-plus-square right"></i>
+                    </button>
+                </a>
+        </div>
+    </div>
 {% endblock %}
