--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,8 +52,8 @@ nav a img {
 }
 .search-box {
     position: absolute;
-     top: 30%;
-    left: 50%;
+     top: 50%;
+    left: 70%;
     transform: translate(-50%, -50%);
 }
 
@@ -145,6 +145,9 @@ nav a img {
 
 #controls {
     margin-top: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 /* .user-info {
