--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix"></i>
-                    <input id="recipe_name" name="recipe_name" type="text" class="validate" required>
+                    <input id="recipe_name" name="recipe_name" type="text" class="validate"  minlength="5" maxlength="20" required>
                     <label for="recipe_name">Recipe Name</label>
                 </div>
             </div>
