edit readme and fix icons

--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -15,8 +15,8 @@
                     
                         <div class="valign-wrapper button-wrapper">
                             <a href="{{ url_for('recipes') }}" class="red btn text-shadow">Reset</a>
-                            <button type="submit" class="green accent-4 ml-3 darken-1 btn text-shadow">
-                                <i class="fas fa-search left"></i> Search
+                            <button type="submit" class=" search-btn green accent-4 darken-1 btn text-shadow">
+                                Search
                             </button>
                         </div>
                         </div>
