--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,17 +16,22 @@ body {
   font-family: "Lato", Helvetica, sans-serif;
   background-color: #effafa;
   width: 100vw;
+  color:#212121;
   
 }
-
+/* 
+nav.nav-extended .nav-wrapper {
+    height: 90px;
+} */
 .nav-wrapper ul{
     margin-right: 40px;
 }
 
 nav a img {
-    width:60px;
-    height:57px;
+    width:64px;
+    height:62px;
     margin-left: 10px;
+    margin-top: 2px;
 }
 
 .sidenav li>a{
@@ -57,6 +62,9 @@ nav a img {
     transform: translate(-50%, -50%);
 }
 
+.search-btn {
+    margin-left: 5px;
+}
 
 .field-wrapper{
     display: block;
